crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__future_annotations_pep_585_p37.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP006 [*] Use `list` instead of `List` for type annotation
  --> future_annotations.py:34:18
   |
34 | def f(x: int) -> List[int]:
   |                  ^^^^
35 |     y = List[int]()
36 |     y.append(x)
help: Replace with `list`
   |
33 |
   - def f(x: int) -> List[int]:
34 + def f(x: int) -> list[int]:
35 |     y = List[int]()
   |
note: This is an unsafe fix and may change runtime behavior
