crates/ruff_linter/src/rules/pyupgrade/snapshots/ruff_linter__rules__pyupgrade__tests__future_annotations_pep_604_p37.snap
---
source: crates/ruff_linter/src/rules/pyupgrade/mod.rs
---
UP045 [*] Use `X | None` for type annotations
  --> future_annotations.py:40:4
   |
40 | x: Optional[int] = None
   |    ^^^^^^^^^^^^^
41 |
42 | MyList: TypeAlias = Union[List[int], List[str]]
help: Convert to `X | None`
   |
39 |
   - x: Optional[int] = None
40 + x: int | None = None
41 |
   |
note: This is an unsafe fix and may change runtime behavior
